--- a/docs/man/man3/hm2_uart_read.asciidoc
+++ b/docs/man/man3/hm2_uart_read.asciidoc
@@ -3,8 +3,7 @@
 :skip-front-matter:
 
 = hm2_uart_read
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
+
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_uart_read.asciidoc
 :man version : 
@@ -12,24 +11,28 @@
 
 == NAME
 
-hm2_uart_read -- read data from a Hostmot2 UART buffer
+**hm2_uart_read** -- read data from a Hostmot2 UART buffer
 
 
 
 == SYNTAX
-int hm2_uart_read(char *name, unsigned char *data)
+**int hm2_uart_read** ( **char** *__name__, **unsigned char** *__data__)
 
 
 
 == DESCRIPTION
 **hm2_uart_read** read data from the UART "name".
-"name" is a unique string given to each UART during hostmot2 setup. The names of 
+"name" is a unique string given to each UART during hostmot2 setup. +
+The names of 
 the available channels are printed to standard output during the driver loading 
-process and take the form:
-hm2_<board name>.<board index>.uart.<index> For example hm2_5i23.0.uart.0
+process and take the form: +
+**hm2_**__<board name>.<board index>__.**uart**.__<index>__ +
+For example +
+**hm2_5i23.0.uart.0**
 
 This function reads a variable number of bytes from the the specified 
-channel.It should be used inside a realtime HAL component registered with the 
+channel. +
+It should be used inside a realtime HAL component registered with the 
 main hostmot2 driver using the function hm2_uart_set_read_function in the setup
 code. 
 
@@ -41,8 +44,14 @@ bytes) and "data" needs to be at least that large or undefined mayhem will ensue
 == RETURN VALUE
 Returns the number of bytes read on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
 
+== AUTHOR
+Andy Pugh
 
 == SEE ALSO
-man hm2_uart_setup, man hm2_uart_send
-See src/hal/drivers mesa_uart.comp for an example usage.
+**hm2_uart_setup** +
+**hm2_uart_send** 
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_uart.comp[mesa_uart.comp] for an example usage
