--- a/docs/man/man3/hm2_allocate_bspi_tram.asciidoc
+++ b/docs/man/man3/hm2_allocate_bspi_tram.asciidoc
@@ -3,8 +3,6 @@
 :skip-front-matter:
 
 = hm2_allocate_bspi_tram
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
 
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_allocate_bspi_tram.asciidoc
@@ -12,35 +10,42 @@
 
 
 == NAME
-
-hm2_allocate_bspi_tram -- Allocate the TRAM regions for a BSPI channel
+**hm2_allocate_bspi_tram** -- Allocate the TRAM regions for a BSPI channel
 
 
 
 == SYNTAX
-hm2_allocate_bspi_tram(char* name)
+**hm2_allocate_bspi_tram** ( **char** *__name__)
 
 
 
 == DESCRIPTION
-**hm2_allocate_bspi_tram** Allocate the TRAM memory for bspi instance "name". 
-"name" is a unique string given to each bspi channel during hostmot2 setup. 
+**hm2_allocate_bspi_tram** Allocate the TRAM memory for bspi instance "name". +
+"name" is a unique string given to each bspi channel during hostmot2 setup. +
 The names of the available channels are printed to standard output during the 
-driver loading process and take the form:
-hm2_<board name>.<board index>.bspi.<index> For example hm2_5i23.0.bspi.0
+driver loading process and take the form: +
+**hm2_**__<board name>.<board index>__.**bspi**.__<index>__ +
+For example +
+**hm2_5i23.0.bspi.0**
 
-This function allocates the TRAM memory and sets up the regular data transfers. 
-It should be called only when all the frames have been defined by calls to 
-hm2_tram_add_bspi_frame(). 
-
-
+This function allocates the TRAM memory and sets up the regular data transfers. +
+It should be called only when all the frames have been defined by calls to +
+**hm2_tram_add_bspi_frame()** 
 
 == RETURN VALUE
 Returns 0 on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
+
+== AUTHOR
+Andy Pugh
 
 
 == SEE ALSO
-man hm2_bspi_setup_chan, man hm2_bspi_write_chan, man hm2_tram_add_bspi_frame
-man hm2_allocate_bspi_tram.
-See src/hal/drivers mesa_7i65.comp for an example usage.
+**hm2_bspi_setup_chan** +
+**hm2_bspi_write_chan** +
+**hm2_tram_add_bspi_frame** +
+**hm2_allocate_bspi_tram** +
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_7i65.comp[mesa_7i65.comp] for an example usage
