--- a/docs/man/man3/hm2_bspi_set_write_function.asciidoc
+++ b/docs/man/man3/hm2_bspi_set_write_function.asciidoc
@@ -3,8 +3,6 @@
 :skip-front-matter:
 
 = hm2_bspi_set_write_function
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
 
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_bspi_set_write_function.asciidoc
@@ -13,31 +11,40 @@
 
 == NAME
 
-hm2_bspi_set_write_function -- Register a function to handle the tram write phase
+**hm2_bspi_set_write_function** -- Register a function to handle the tram write phase
 of a hostmot2 buffered SPI driver. 
 
 
 == SYNTAX
-int hm2_bspi_set_write_function(char *name, void *func, void *subdata)
+**int hm2_bspi_set_write_function** ( **char** *__name__, **void** *__func__, **void** *__subdata__ )
 
 
 
 == DESCRIPTION
-**hm2_bspi_set_write_function** Registers a function in an external driver 
+**hm2_bspi_set_write_function** +
+Registers a function in an external driver 
 (typically written in "comp") to be called every time that the main Hostmot2
 driver calls the generic "prepare_tram_write" functions. 
- The names of the available channels are printed to standard output during the 
-driver loading process and take the form:
-hm2_<board name>.<board index>.bspi.<index> For example hm2_5i23.0.bspi.0
- "func" should be a pointer to a function in the sub driver which is to be
+
+The names of the available channels are printed to standard output during the 
+driver loading process and take the form: +
+**hm2_**__<board name>.<board index>__.**bspi**.__<index>__ +
+For example +
+**hm2_5i23.0.bspi.0**
+
+"func" should be a pointer to a function in the sub driver which is to be
 called to process the pins into BSPI write registers prior to the regular TRAM
-write phase. The function must take a single argument, a pointer to an
-individual instance of the internal driver. If defined in comp then the 
-function must /fBnot/fP use the FUNCTION() convenience macro, and the argument
-to the function in the definition  must /fBallways/fP be (struct state *inst).
- "subdata" is a pointer to the driver instance internal data. In the case of a 
+write phase. +
+The function must take a single argument, a pointer to an
+individual instance of the internal driver. +
+If defined in comp then the 
+function must **not** use the FUNCTION() convenience macro, and the argument
+to the function in the definition  must **always** be (struct state *inst).
+
+"subdata" is a pointer to the driver instance internal data. In the case of a 
 driver written in comp this will always be "inst" in the function call.
- If using comp then the call to this function should be anywhare in the 
+
+If using comp then the call to this function should be anywhere in the 
 EXTRA_SETUP code. 
 
 
@@ -45,9 +52,16 @@ EXTRA_SETUP code.
 == RETURN VALUE
 Returns 0 on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
 
+== AUTHOR
+Andy Pugh
 
 == SEE ALSO
-man hm2_bspi_setup_chan, man hm2_bspi_write_chan, man hm2_tram_add_bspi_frame
-man hm2_allocate_bspi_tram.
-See src/hal/drivers mesa_7i65.comp for an example usage.
+**hm2_bspi_setup_chan** +
+**hm2_bspi_write_chan** +
+**hm2_tram_add_bspi_frame** +
+**hm2_allocate_bspi_tram** 
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_7i65.comp[mesa_7i65.comp] for an example usage
