--- a/docs/man/man3/hm2_bspi_setup_chan.asciidoc
+++ b/docs/man/man3/hm2_bspi_setup_chan.asciidoc
@@ -3,8 +3,7 @@
 :skip-front-matter:
 
 = hm2_bspi_setup_chan
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
+
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_bspi_setup_chan.asciidoc
 :man version : 
@@ -12,37 +11,57 @@
 
 == NAME
 
-hm2_bspi_setup_chan -- setup a Hostmot2 bspi channel
+**hm2_bspi_setup_chan** -- setup a Hostmot2 bspi channel
 
 
 
 == SYNTAX
-int hm2_bspi_setup_chan(char *name, int chan, int cs, int bits, float mhz,
-int delay, int cpol, int cpha, int clear, int echo)
+**int hm2_bspi_setup_chan** ( **char** *__name__, **int** __chan__, **int** __cs__, **int** __bits__, **float** __mhz__,
+**int** __delay__, **int** __cpol__, **int** __cpha__, **int** __clear__, **int** __echo__ )
 
 
 
 == DESCRIPTION
 **hm2_bspi_setup_chan** Setup the bspi channel "chan" on the bspi instance 
-"name". "name" is a unique string given to each bspi channel during hostmot2 
-setup. The names of the available
+"name". 
+
+"name" is a unique string given to each bspi channel during hostmot2 
+setup. +
+The names of the available
 channels are printed to standard output during the driver loading process and 
-take the form:
-hm2_<board name>.<board index>.bspi.<index> For example hm2_5i23.0.bspi.0
-Channels are numbered 0 to 15.
+take the form: +
+**hm2_**__<board name>.<board index>__.**bspi**.__<index>__ +
+For example +
+**hm2_5i23.0.bspi.0** +
+
+Channels are numbered 0 to 15. +
 The value on the chip-select lines is set by cs and need not match the
-channel number. BSPI supports 4 chip select lines, so the valid range for cs is 
-0-15. "bits" sets the bit-length of the SPI packet. The maximum supported length
+channel number. 
+BSPI supports 4 chip select lines, so the valid range for cs is 
+0-15. 
+
+"bits" sets the bit-length of the SPI packet. +
+The maximum supported length
 is 64 bits but this will span two read FIFO entries and will need special 
-handling. "mhz" sets the chip communication rate. The maximum value for this is 
+handling. 
+
+"mhz" sets the chip communication rate. The maximum value for this is 
 half the FPGA base frequency, so for example with a 48MHz 5i23 the max SPI 
-frequency is 24Mhz. Values in excess of the max supported will be silently 
-rounded down. "delay" sets the chip select valid delay (in nS). "cpha" is the 
+frequency is 24Mhz. +
+Values in excess of the max supported will be silently 
+rounded down. 
+
+"delay" sets the chip select valid delay (in nS). 
+
+"cpha" is the 
 clock phase and "cpol" is the clock polarity (from the device datasheet). 
+
 "clear" controls whether the frame clear bit is set after the 32 bit buffer 
-transfer. This parameter should be set to 1 when the frame length is greater 
-than 32 bits and the next data in the FIFO contains the other bits. "echo" is 
-sense-inverted, it should be set to 1 for devices which do not return data (such
+transfer. +
+This parameter should be set to 1 when the frame length is greater 
+than 32 bits and the next data in the FIFO contains the other bits. 
+
+"echo" is sense-inverted, it should be set to 1 for devices which do not return data (such
  as DACs). 
 
 
@@ -50,9 +69,16 @@ sense-inverted, it should be set to 1 for devices which do not return data (such
 == RETURN VALUE
 Returns 0 on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
 
+== AUTHOR
+Andy Pugh
 
 == SEE ALSO
-man hm2_bspi_setup_chan, man hm2_bspi_write_chan, man hm2_tram_add_bspi_frame
-man hm2_allocate_bspi_tram.
-See src/hal/drivers mesa_7i65.comp for an example usage.
+**hm2_bspi_setup_chan** +
+**hm2_bspi_write_chan** +
+**hm2_tram_add_bspi_frame** + 
+**hm2_allocate_bspi_tram** 
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_7i65.comp[mesa_7i65.comp] for an example usage
