--- a/docs/man/man3/hm2_bspi_write_chan.asciidoc
+++ b/docs/man/man3/hm2_bspi_write_chan.asciidoc
@@ -3,8 +3,7 @@
 :skip-front-matter:
 
 = hm2_bspi_write_chan
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
+
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_bspi_write_chan.asciidoc
 :man version : 
@@ -12,25 +11,32 @@
 
 == NAME
 
-hm2_bspi_write_chan -- write data to a Hostmot2 Buffered SPI channel
+**hm2_bspi_write_chan** -- write data to a Hostmot2 Buffered SPI channel
 
 
 
 == SYNTAX
-hm2_bspi_write_chan(char* name, int chan, u32 val)
+**hm2_bspi_write_chan** (**char** *__name__, **int** __chan__, **u32** __val__ )
 
 
 
 == DESCRIPTION
 **hm2_bspi_write_chan** write one-time data to the bspi channel "chan" on the 
-bspi instance "name". "name" is a unique string given to each bspi channel 
-during hostmot2 setup. The names of the available
-channels are printed to standard output during the driver loading process and 
-take the form:
-hm2_<board name>.<board index>.bspi.<index> For example hm2_5i23.0.bspi.0
+bspi instance "name". 
 
-This function performs a one-time write of data to the specified channel. It is
-typically used for setup and chip enabling purposes. It should not be used in 
+"name" is a unique string given to each bspi channel 
+during hostmot2 setup. +
+The names of the available
+channels are printed to standard output during the driver loading process and 
+take the form: +
+**hm2_**__<board name>.<board index>__.**bspi**.__<index>__ +
+For example +
+**hm2_5i23.0.bspi.0**
+
+This function performs a one-time write of data to the specified channel. +
+It is
+typically used for setup and chip enabling purposes. +
+It should not be used in 
 the main loop for regular data transfers (but is appropriate to use for on-the-
 fly setup changes).
 
@@ -39,9 +45,16 @@ fly setup changes).
 == RETURN VALUE
 Returns 0 on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
 
+== AUTHOR
+Andy Pugh
 
 == SEE ALSO
-man hm2_bspi_setup_chan, man hm2_bspi_write_chan, man hm2_tram_add_bspi_frame
-man hm2_allocate_bspi_tram.
-See src/hal/drivers mesa_7i65.comp for an example usage.
+**hm2_bspi_setup_chan** +
+**hm2_bspi_write_chan** +
+**hm2_tram_add_bspi_frame** +
+**hm2_allocate_bspi_tram** 
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_7i65.comp[mesa_7i65.comp] for an example usage
