--- a/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
+++ b/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
@@ -3,8 +3,7 @@
 :skip-front-matter:
 
 = hm2_tram_add_bspi_frame
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
+
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_tram_add_bspi_frame.asciidoc
 :man version : 
@@ -12,27 +11,32 @@
 
 == NAME
 
-hm2_tram_add_bspi_frame -- add a register-write to the Hostmot2 TRAM
+**hm2_tram_add_bspi_frame** -- add a register-write to the Hostmot2 TRAM
 
 
 
 == SYNTAX
-hm2_tram_add_bspi_frame(char *name, int chan, u32 **wbuff, u32 **rbuff)
+**hm2_tram_add_bspi_frame** ( **char** *__name__, **int** __chan__, **u32** **__wbuff__, **u32** **__rbuff__ )
 
 
 
 == DESCRIPTION
 **hm2_tram_add_bspi_frame** Add a regular (every thread) write event to the 
 Hostmot2 tram for bspi instance "name". "name" is a unique string given to each 
-bspi channel during hostmot2 setup. The names of the available
+bspi channel during hostmot2 setup. +
+The names of the available
 channels are printed to standard output during the driver loading process and 
-take the form:
-hm2_<board name>.<board index>.bspi.<index> For example hm2_5i23.0.bspi.0
+take the form: +
+**hm2_**__<board name>.<board index>__.**bspi**.__<index>__ +
+For example +
+**hm2_5i23.0.bspi.0**
 
 This function is used to add a regular, every thread, write or write-read 
-transaction to the Translation RAM system. A write need not have a read (use 0
-for **rbuff) but it is an error to have a read without a write. Note that the 
-TRAM list is not actioned until the hm2_allocate_bspi_tram function is called. 
+transaction to the Translation RAM system. +
+A write need not have a read (use 0
+for **rbuff) but it is an error to have a read without a write. +
+Note that the 
+TRAM list is not actioned until the hm2_allocate_bspi_tram function is called. +
 The read and write parameters must be pointers to pointers, as TRAM re-maps the 
 buffers into contiguous memory. 
 
@@ -41,9 +45,16 @@ buffers into contiguous memory.
 == RETURN VALUE
 Returns 0 on success and -1 on failure.
 
+== LICENCE
+Issued under the terms of the GPL v2 License or any later version
 
+== AUTHOR
+Andy Pugh
 
 == SEE ALSO
-man hm2_bspi_setup_chan, man hm2_bspi_write_chan, man hm2_tram_add_bspi_frame
-man hm2_allocate_bspi_tram.
-See src/hal/drivers mesa_7i65.comp for an example usage.
+**hm2_bspi_setup_chan** +
+**hm2_bspi_write_chan** +
+**hm2_tram_add_bspi_frame** +
+**hm2_allocate_bspi_tram** +
+
+See link:https://github.com/machinekit/machinekit/blob/master/src/hal/drivers/mesa_7i65.comp[mesa_7i65.comp] for an example usage
