--- a/docs/developing/machinekit-developing.asciidoc
+++ b/docs/developing/machinekit-developing.asciidoc
@@ -73,7 +73,7 @@ correctly for running Machinekit.
 
 [source,bash]
 ----
-sh -c "echo 'if [ -f ~/machinekit/scripts/rip-environment ]; then\n\
+sh -c "echo -e 'if [ -f ~/machinekit/scripts/rip-environment ]; then\n\
     source ~/machinekit/scripts/rip-environment\n\
     echo \"Environment set up for running Machinekit\"\n\
 fi\n' >> ~/.bashrc"
