--- a/docs/config/pncconf.asciidoc
+++ b/docs/config/pncconf.asciidoc
@@ -37,6 +37,12 @@ is also a help button that gives some help information about the pages, diagrams
 TIP: PNCconf's help page should have the most up to date info and has additional
  details.
 
+[NOTE]
+Before starting pncconf it is advisable to first run one of the simulated configs,
+eg. axis_mm.  This will ensure your system is working properly and will create
+a machinekit folder in your home dir if it does not already exist.
+This is required for pncconf.
+
 [float]
 Step by Step Instructions
 //__=========================
