--- a/docs/config/stepper.asciidoc
+++ b/docs/config/stepper.asciidoc
@@ -54,7 +54,7 @@ others.)
 
 == Pinout[[sec:Pinout]](((pinout)))
 
-One of the major flaws in Machinekit was that you couldn't specify the pinout
+One of the major flaws in LinuxCNC was that you couldn't specify the pinout
 without recompiling the source code. Machinekit is far more flexible, and now
 (thanks to the Hardware Abstraction Layer) you can easily specify which
 signal goes where. See the HAL manual for more detailed information on
