--- a/docs/hal/multicore.asciidoc
+++ b/docs/hal/multicore.asciidoc
@@ -70,21 +70,70 @@ https://plus.google.com/events/cvhj9r8m2gh0v0kj7ccme36hlpo
 Where humanly possible, the changes are kept 'under the skin' and code that worked previously, will continue to do so,
 even if the way it does it is different. +
 
+=== HAL objects
+
 A major rewrite of the HAL objects was made, with a base union structure of *hal_object_ptr*. 
 
 All objects share a common *halhdr_t* struct as the first field in their hal_object descriptor. +
 This gives information such as object ID, name, owner, type and sets read/write barriers. +
 All are available via accessor functions.
 
-The code which used direct memory access via pointer dereferencing was replaced. +
-Halcmd for instance contains a huge number of display functions, each of which was previously reliant upon its own list walking routine,
-used with the mutex held, which directly accessed data from dereferenced pointers.
+The legacy code which used direct memory access via pointer dereferencing was replaced.
 
-These are replaced with a single recursive iteration routine *halg_foreach* +
+Halcmd for instance contains a huge number of display functions, each of which was previously reliant upon its own list walking routine,
+used with the mutex held, which directly accessed data from dereferenced pointers. +
+These are replaced with a single recursive iteration routine *halg_foreach*
+
 This takes arguments to specify a callback routine to handle the iterations and a *foreach_args_t* structure. +
 That structure specifies the hal object type to be iterated through, name to be matched etc. and also contains additional user defined data
 which can be used in the callback routine. +
 Along with various *yield_xxx* routines, it can return anything from a count of all matches to a detailed printout of matches.
+
+=== Instance parameters
+
+The use and handling of instanceparams has changed.
+
+Instance parameters should consist of int values only. eg.
+
+[ source, bash ]
+----
+static int debug = 0;
+RTAPI_IP_INT(debug, "turn on extra debug output");
+----
+These are safe to re-use the same allocated memory space when creating a new instance.
+
+However, because new instances will re-use the same parameter, it should be zeroed or voided by the previous instance, once the value has been saved.
+A value which is essentially bool, can just be set to 0, but a value which is within a range, is safest to be set to -1, then the new instance can set the default value if this -1 is passed unchanged.
+
+Where the value should not be reused (eg. hm2_soc_ol board numbering), the value should also be set to -1 after being saved locally.
+Then the next instance upon finding a -1 value, will know that there has been a previous instance created and that it is unsafe to continue without a valid value.
+
+String parameters are particularly unsafe in re-use of the kernel module parameter, because the allocated memory can only be guaranteed sufficient for the first string passed.
+If a second longer one is used, it could overrun.
+
+They also appear prone to peculiar errors, such as found with the hm2_soc_ol where a parameter
+which was set to NULL, was in fact returning a string of "(null)".
+
+Strings can be passed easily after any int instance params and the -- delimiter (two dashes), via the argc/argv mechanism and are therefore certain to be per instance args
+eg
+[ source, bash ]
+----
+newinst hm2_soc_ol hm2-socfpga0 debug=0 num=1 -- config=firmware=socfpga/dtbo/DE0_Nano_SoC_DB25.7I76_7I76_7I76_7I76.dtbo num_encoders=2 num_stepgens=4 descriptor=/some/descriptor/file/address
+----
+The argc/argv passed to instantiate(), contain the module name at argv[0] and the instance name at argv[1] +
+They do not contain any of the instance params, which are dealt with separately. +
+Therefore, in the example above, config=xxx would be at argv[2] and descriptor=xxx at argv[3] +
+The component simply needs to test and parse these args and act accordingly. 
+
+In all cases the params / args are saved locally and those local copies used in all operations thereafter. +
+Referring to a global parameter after another instance has been created, will result in the value set by the latest instance being passed, not the original one.
+
+=== ringbuffers
+
+ringbuffer code changes slightly, in that +
+*hal_ring_detach(char *name, ringbuffer_t *rb)* +
+becomes +
+*hal_ring_detach(ringbuffer_t *rb)*
 
 == v2 components
 
@@ -94,9 +143,6 @@ They have v2 inserted before the file extension eg. debouncev2.icomp
 All v2 components are instantiated, even if the v1 counterpart is not. +
 Some are C components, but the vast majority are .icomp scripts designed to be generated with the *instcomp* tool. + 
 This is the recommended way to write new components.
-
-For further information on writing instantiated components (v1 or v2) see
-http://www.machinekit.io/docs/hal/instcomp
 
 In the instantiated components directory https://github.com/machinekit/machinekit/tree/master/src/hal/i_components, 
 there are conventional and v2 versions of each component. +
@@ -117,7 +163,8 @@ _becomes_ +
 The header file containing macros is included into all components created with instcomp. +
 It is https://github.com/machinekit/machinekit/blob/master/src/hal/lib/hal_accessor_macros.h
 
-
+For further information on writing instantiated components (v1 or v2) see
+http://www.machinekit.io/docs/hal/instcomp
 
 
 Last updated 2017-03-04 10:44:22 GMT
