Updated instcomp document to reflect changes re v1 components
New tutorial for creation of v1 components

Linked in developing index and instcomp doc

Remove new-instantiated-components.  Contents dated and all
relevant info in other docs.

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/developing/develop-index.asciidoc
+++ b/docs/developing/develop-index.asciidoc
@@ -17,6 +17,8 @@
 
 - link:/docs/developing/writing-components[General info and links re writing components]
 
+- link:/docs/hal/instcomp_writing_a_component[Tutorial on writing an instantiated component with instcomp]
+
 - link:/docs/developing/toolchangers[Specific info on writing toolchanger components]
 
 - link:/docs/developing/CAN-developing[Information on developing using CAN]
