--- a/docs/getting-started/install-rt-kernel-amd64.asciidoc
+++ b/docs/getting-started/install-rt-kernel-amd64.asciidoc
@@ -43,5 +43,16 @@ sudo apt-get update
 sudo apt-get install linux-image-rt-amd64
 ----
 
+== Debian Stretch repos contain rt-preempt kernels
+
+Update apt and pull the kernel
+
+[source,bash]
+----
+sudo apt-get update
+sudo apt-get install linux-image-rt-amd64
+----
+
+
 If you want to build your own kernel, see the Developing section for more details.
 
