--- a/docs/getting-started/install-rt-kernel-arm7.asciidoc
+++ b/docs/getting-started/install-rt-kernel-arm7.asciidoc
@@ -3,7 +3,7 @@
 
 :skip-front-matter:
 
-= Xenomai realtime kernel (arm7)
+= Xenomai realtime kernel (arm7) Wheezy and Jessie
 
 Choose and copy and paste the following into a shell to install your kernel:
 
