--- a/docs/drivers/xhc-whb04b-6.asciidoc
+++ b/docs/drivers/xhc-whb04b-6.asciidoc
@@ -1,11 +1,11 @@
 ---
 ---
+
 :skip-front-matter:
 
 = xhc-whb04b-6
-:manmanual: HAL Components
-:mansource: ../man/man1/xhc-whb04b-6.asciidoc
-:man version : 0.1
+:toc:
+[[cha:xhcwhb04b6-driver]] (((XHC WHB04B-6 Pendant)))
 
 == NAME
 *xhc-whb04b-6* - User-space jog dial HAL component for the wireless XHC-WHB04B-6 device.
